--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@coreui/utils": "^2.0.2",
     "@coreui/vue": "^5.4.1",
     "@popperjs/core": "^2.11.8",
+    "node-forge": "^1.3.1",
     "pinia": "^2.2.6",
     "simplebar-vue": "^2.3.5",
     "vue": "^3.5.12",
