--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Github Pages  # Defines the name of the GitHub Actions workflow.
 on:
     push:
         branches:
-            - develop  # Triggers the workflow on each push to the 'develop' branch.
+            - main  # Triggers the workflow on each push to the 'develop' branch.
 
 jobs:
     build:
